--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+.main{
+    display: flex;
+    justify-content: space-evenly
+}
 .box{
-    margin: auto;
     margin-top: 30px;
     display: flex;
     align-items: center;
