--- a/style.css
+++ b/style.css
@@ -5,17 +5,17 @@
 }
 .main{
     display: flex;
-    justify-content: space-evenly
+    justify-content: space-evenly;
 }
 .box{
-    margin-top: 30px;
+    margin-top: 20px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     gap: 10px;
     width: 300px;
-    height: 150px;
+    height: 170px;
     background-color: #edede7;
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.831);
     border-radius: 20px;
@@ -23,12 +23,10 @@
 body{
     background-color: #8f9293;
 }
-.agecnvt{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
-    margin-top: 5px;
+input{
+    border-radius: 3px;
+    border: 1px solid gray;
+
 }
 .result{
     display: flex;
